# Autonomous-Multi-Robot-Parking-System

./: .gitignore  LICENSE  README.md  abstract.md  bashrc_backup.txt  howtorun.md  test.txt
About_Setting/: README.md  about_port.md  error.md  howtorun.md
Astar/: CMakeLists.txt  package.xml
Astar/include/: OccMapTransform.h
Astar/launch/: astar.launch
Astar/src/: Astar.cpp  main.cpp  main_.cpp  main_path.cpp
bag/: lidar_test.bag
dwa_planner/config/: dwa_param.yaml  robot_param.yaml
dwa_planner/include/dwa_planner/: dwa_planner.h
dwa_planner/launch/: local_planner.launch
dwa_planner/src/: dwa_planner.cpp  dwa_planner_node.cpp
flag_mux/: CMakeLists.txt  README.md  package.xml
flag_mux/src/: flag_mux.cpp
gazebo_map/gazebo_map/: CMakeLists.txt  package.xml
gazebo_map/gazebo_map/launch/: controller.launch  (+3 more)
imu_test/: CMakeLists.txt  README.md  package.xml
imu_test/src/: imu_pub.cpp
map/: CMakeLists.txt  map2.pgm  mymap.pbstream  mymap.pgm  package.xml
map/maps/: aaa.pgm  capstone_map.pgm  capstone_map3.pgm  capstone_map_0.pgm~  capstone_map_00.pgm~  capstone_map_000.pgm  capstone_map_0000.pgm  capstone_map_00000.pgm  capstone_map_00000.pgm~  capstone_map_1.pgm  capstone_map_99.pgm  capstone_map_9999.pgm~  capstone_map_99999.pgm~  capstone_map_999999.pgm  map.pgm  map.yaml  map_basic.yaml  real_map_final.pgm  test_map_180_thick.pgm  test_map_2.pgm  test_map_rotate_180.pgm  test_map_rotate_180_new.pgm  test_map_wide.pgm
mca_pkg/: CMakeLists.txt  package.xml
mca_pkg/scripts/: RVO.py  get_global_map.py
mca_pkg/src/: path_col.cpp
mul_amcl/: CMakeLists.txt  package.xml
mul_amcl/launch/: amcl.launch  start_ekf_localization.launch
mul_amcl/param/: amcl_params.yaml
multi_parking_sys/: CMakeLists.txt  package.xml
multi_parking_sys/launch/: als.launch  localization_only_mode.launch  main.launch  multi_amcl.launch  multi_astar.launch  multi_carto.launch  multi_map.launch  multi_obstacle.launch  multi_odometry.launch  multi_pathtracker.launch  multi_static_pub.launch  multi_tf_baselink.launch  nps.launch  operator_one.launch
multi_parking_sys/lua/: robot_1_rplidar.lua  robot_1_rplidar_local.lua  robot_2_rplidar.lua  robot_3_rplidar.lua  rplidar.lua  rplidar_local.lua
multi_parking_sys/map/: -home-lee-jaewon-catkin_ws-src-Autonomous-Multi-Robot-Parking-System-multi_parking_sys-launch-.txt  -home-lee-jaewon-catkin_ws-src-Autonomous-Multi-Robot-Parking-System-multi_parking_sys-lua-.txt 2  map115.pgm  map115.yaml  map_test.yaml  mymap.yaml  mymap0302.pbstream  mymap0315.pbstream  mymap0325.pbstream  mymap032525.pgm  mymap032525.yaml  mymap0327.pbstream  mymap0507.pbstream  mymap0526.pbstream  mymap0527.pbstream  mymap0527.pgm  mymap0527.yaml  mymap2.pbstream  mymap222.pgm  mymap222.yaml  mymap33.pgm  mymap33.yaml  test_map.pgm  test_map.yaml
multi_parking_sys/rviz/: als.rviz  carto.rviz  multi.rviz  multi_carto.rviz  operator_one.rviz
multi_parking_sys/src/: CMakeLists.txt  imu_pub.cpp  initialposeSrv.py  odometry.cpp  package.xml  s.cpp  state_subscribe.cpp
obstacle_pkg/: CMakeLists.txt  package.xml
obstacle_pkg/include/: obstacle.h
obstacle_pkg/launch/: obstacle.launch
obstacle_pkg/src/: obstacle.cpp
parkingUI/: CMakeLists.txt  README.md  package.xml
parkingUI/config/: ParkingLotInfo.txt  ParkingLotInfo.yaml
parkingUI/include/parkingUI/: main_window.hpp  qnode.hpp
parkingUI/launch/: parkingUI.launch
parkingUI/map/: map.pgm  map.yaml
parkingUI/src/: ParkingInfo.cpp  ParkingLot.cpp  main.cpp  main_window.cpp  qnode.cpp
parkingUI/ui/: main_window.ui
parking_msgs/: CMakeLists.txt  README.md  package.xml
parking_msgs/action/: Planner2Tracker.action  liftOrder.action  parkingOrder.action
parking_msgs/msg/: Sequence.msg  action.msg  miniSequence.msg  parkingDone.msg  robotProcess.msg
parking_msgs/srv/: carNum.srv  order.srv
pathTracking/: CMakeLists.txt  package.xml  tracker.rviz
pathTracking/include/pathTracking/: tracker.h
pathTracking/launch/: multi_astar.launch  multi_tracker.launch  pathTopic.launch  tracker1.launch  tracker2.launch  tracker3.launch  tracker_kanayama.launch  tracker_pid.launch  tracker_stanley.launch
pathTracking/map/: map.yaml
pathTracking/msg/: errorData.msg
pathTracking/pathData/: path1.txt  path2.txt  path3.txt  path4.txt
pathTracking/rviz/: tracker.rviz
pathTracking/src/: error_logger.cpp  kanayama.cpp  pathTopic.cpp  pid2.cpp  purePursuit.cpp  stanley.cpp  tracker.cpp
pose/: CMakeLists.txt  package.xml
pose/src/: pose.cpp  s.cpp
pose_to_odom/: CMakeLists.txt  package.xml
pose_to_odom/src/: posetoodom.cpp
process/: CMakeLists.txt  package.xml
process/include/process/: processmaker.h
process/src/: Sequence.cpp  processmaker.cpp
rbp4_sys/: CMakeLists.txt  package.xml
rbp4_sys/launch/: all_pkg.launch  lidar.launch
robot_localization/params/: ekf_template.yaml
task_allocation/: CMakeLists.txt  README.md  package.xml
task_allocation/scripts/: plus_hug.py  task_allo.py
test_pkg/: CMakeLists.txt  package.xml
test_pkg/include/test_pkg/: local_goal_pub.h
test_pkg/launch/: car_plate_test.launch
test_pkg/msg/: CarData.msg
test_pkg/scripts/: A_star.py  Costmap_test.py  Fine_Contour.py  MAP.py  astar.py  car_number_service_server.py  car_plate.py  car_plate_number_test.py  car_plate_ros.py  cubic_spline_planner.py  cv_convert.py  ekf.py  imu_test.py  laser_test.py  license_number_test.py  lidar_test.py  lidar_to_grid_map.py  local_goal_pub.py  local_plan_test.py  lqr_controller_test.py  maptest.py  path_test.py  priority_queue.py  spline_path.py  test.py  test_map.py  test_path.py
test_pkg/src/: cost_map_node.cpp  imu_pub.cpp  local_goal_pub.cpp  path_publisher.cpp  topic_publisher.cpp  topic_subscriber.cpp
ui_emergency/: CMakeLists.txt  package.xml
ui_emergency/src/: main.cpp  main_window.cpp  qnode.cpp
ui_emergency/ui/: main_window.ui
ui_main/: CMakeLists.txt  README.md  package.xml
ui_main/include/ui_main/: main_window.hpp  qnode.hpp
ui_main/src/: main.cpp  main_window.cpp  qnode.cpp
ui_main/ui/: main_window.ui
usb_cam/config/: usb_cam.yml
(+33 files in other folders)
